apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: production
spec:
  type: NodePort
  selector:
    app: LoadBalancer
  ports:
    - port: 3000
      nodePort: 31111
